<resources>
    <string name="app_name">Bookstore</string>
    <string name="Bookname">Bookname</string>
    <string name="Author">Author</string>
    <string name="Year">Year</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Avil">Avil</string>
    <string name="Date">Date</string>
    <string name="Isbn">Isbn</string>


    <string name="Authorcolon">Author:</string>
    <string name="Yearcolon">Year:</string>
    <string name="Pricecolon">Price:</string>
    <string name="Quantitycolon">Quantity:</string>
    <string name="Avilcolon">Availability:</string>
    <string name="Available">Available</string>
    <string name="NotAvailable">Not Available</string>
    <string name="Datecolon">Date:</string>
    <string name="Isbncolon">ISBN:</string>
    <string name="updatecolon">UPDATE</string>
    <string name="Insertcolon">INSERTAR</string>
    <string name="delete">ELIMINAR</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">Libreria meca</string>
    <string name="nav_header_subtitle">Libreriascoppel@Coppel.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Nombre_libreria">Bookstore</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>